# Decentralized-Autonomous-Hedge-Fund-Protocol

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.hypothesis/constants/: 0d4542e2198d1a6d  140e88c5071a915c  532ec640c46a1265  9addb118b763009d  aa23fdf23f40da3b  abfbb736f9f98267  b1613df61b1e534a  b1ed495532322f5c  b8ed34c6ab4a0b12  c7ab38e39497f810  da39a3ee5e6b4b0d
backend/: .dockerignore  .env.example  contract_submissions.json  governance_store.json  main.py  requirements.txt  test_live_trades.py  test_main.py  test_ml.py  trade_diagnostic.py
backend/agents/: crypto_news.py  gemini_social.py  market_stream.py  price_engine.py  trading_engine.py
backend/api/: agents.py  analytics.py  contracts.py  governance.py  integrations.py  intelligence.py  news.py  pools.py  trading.py  ws_prices.py  ws_social.py  ws_trading.py
contracts/: AgentRegistry.sol  CapitalVault.sol  SlashingModule.sol  hardhat.config.js  package-lock.json  package.json
contracts/rust/solana/allocation_engine/programs/allocation_engine/: Cargo.toml
contracts/rust/solana/allocation_engine/programs/allocation_engine/src/: lib.rs
contracts/rust/solana/slashing_module/programs/slashing_module/: Cargo.toml
contracts/rust/solana/slashing_module/programs/slashing_module/src/: lib.rs
db/: package-lock.json  package.json  schema.sql  seed-supabase.mjs  seed.sql
frontend/: .env.example  Dockerfile  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: strip_codebase.py
(+217 files in other folders)
