[package]
name = "slashing_module"
version = "0.1.0"
description = "Solana Slashing Module"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slashing_module"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
